# fornet

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README_CN.md  windows-build.ps1  windows-ci.ps1
.github/workflows/: android_build.yml  ci_check_build.yml  client_build.yml  client_build_arm64.yml  client_mac_arm64.yml  server_build.yml  windows_build.yml
admin-web/: .env  .env.dev  .gitignore  README.md  build_to_server.sh  config-overrides.js  package-lock.json  package.json
admin-web/src/: auth.tsx  index.less  index.tsx  routes.tsx  setupProxy.js
admin-web/src/api/: authAPI.ts  http.ts  infoAPI.ts  keycloakAPI.ts  networkAPI.ts  nodeAPI.ts
admin-web/src/component/: DayjsFormat.tsx
admin-web/src/layout/: AppBreadcrumb.tsx  AppLayout.less  AppLayout.tsx
admin-web/src/local/: en-US.ts  intl.tsx  zh-CN.ts
admin-web/src/store/: index.ts
admin-web/src/view/: NotFoundPage.tsx
app/: .gitignore  README.md  pubspec.yaml
app/android/: .gitignore
app/android/app/: build.gradle
app/lib/: app.dart  bridge_definitions.dart  bridge_generated.dart  main.dart  mobile_app.dart  pc_app.dart
app/lib/component/: window_button.dart
app/lib/native/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  extra_ffi.dart  ffi.dart
app/lib/page/: login_page.dart  welcome_page.dart
app/lib/state/: fornet_lib_manager.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/: .gitignore
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: .gitignore  MainFlutterWindow.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/windows/: CMakeLists.txt  rust.cmake
backend/: .gitignore  .scalafmt.conf  README.md  build.sbt
backend/api_test/: README.md  http-client.env.json  mqtt_callback.http  restfulapi.http
backend/project/: Dependencies.scala  dist.sbt  scalapb.sbt
client/: .gitignore  README.md  build_android.sh
client/.cargo/: config.toml
client/lib/: Cargo.toml  build.rs
client/lib/.cargo/: config.toml
client/lib/examples/: tokio_select_example.rs
client/lib/fornet-lib.xcodeproj/: project.pbxproj
client/lib/fornet-lib.xcodeproj/xcuserdata/timzaak.xcuserdatad/xcschemes/: xcschememanagement.plist
client/lib/src/: bridge_generated.io.rs  bridge_generated.rs  client_manager.rs  config.rs  flutter_api.rs  lib.rs  sc_manager.rs  server_manager.rs  wr_manager.rs
client/lib/src/api/: command_api.rs  file_socket_api_server.rs  flutter_ffi.rs  mod.rs
client/lib/src/device/: android_device.rs  mod.rs  peer.rs  script_run.rs  tunnel.rs  udp_network.rs  unix_device.rs  windows_device.rs
client/lib/src/device/auto_launch/: macos.rs  mod.rs  windows.rs
client/lib/src/device/tun/: android.rs  mod.rs  unix.rs  window.rs
client/lib/src/device/tun/sys/: linux.rs  macos.rs  mod.rs
client/lib/src/server_api/: mod.rs  unix.rs  windows.rs
command/docker-compose/: .gitignore
protobuf/: auth.proto  config.proto
relay/: .gitignore  Cargo.toml  README.md  tun_server_config.toml  turn_server_config.toml
relay/src/: main.rs  reconnect.rs  simple.rs  simple_ice_api.rs  simple_stun.rs  simple_tcp.rs
win-tun-driver/: .gitignore
win-tun-driver/ForTun/: Adapter.c  Adapter.h  Device.c  Device.h  Driver.c  Driver.h  ForTun.inf  ForTun.sln  ForTun.vcxproj  ForTun.vcxproj.filters  PropertySheet.props  Public.h  Queue.c  Queue.h  RXQueue.c  RXQueue.h  ReadMe.txt  Ringbuffer.c  Ringbuffer.h  TXQueue.c  TXQueue.h  Trace.h  netringiterator.h  precomp.h
win-tun-driver/ForTunCli/: .gitignore  Cargo.toml
win-tun-driver/ForTunCli/src/: device_ops.rs  lib.rs  overlapped_file.rs
(+132 files in other folders)
