[package]
name = "fornet-lib"
version = "0.1.0"
edition = "2021"

# For test
#[profile.release]
#debug = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "1.79.0"
tonic = "0.9.2"
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "net", "rt"] }
socket2 = "0.4.7"

tokio-stream = "0.1"

tokio-util = { version = "0.7.8", features = ["io-util"] } # by tun

x25519-dalek = { version = "2.0.0-pre.1", features = ["reusable_secrets"] }

ed25519-compact = "1.0.15"
rand = { version = "0.8.5" }
base64 = "0.21.2"

anyhow = "1.0"
arrayref = "0.3.6"

#clap = { version = "3.2.20", features = ["env"] }

serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"]}
new_string_template = "1.4.0"

dirs = "5.0.1"

tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15",  features = ["env-filter"]}

ip_network = "0.4.1"
ip_network_table = "0.2.0"

libc = "0.2"

cfg-if = "1.0"

#TODO: replaced shell-candy to cmd_lib
shell-candy = "0.4"
cmd_lib = "1.3"
tempfile = "3.5"

auto-launch-extra = {version = "0.5", package = "auto-launch"}

mqrstt = "0.2.1"
tokio-rustls = "0.24.1"
#tokio-native-tls = "0.3.1"
async-trait = "0.1.68"

[dependencies.boringtun]
version = "0.5.2"
path = "../../third/boringtun/boringtun"

[target.'cfg(unix)'.dependencies]
tun = { version = "0.5", features = ["async"], path = "../../third/rust-tun"}
nix = { version = "0.25" } #compatible with boringtun
[target.'cfg(windows)'.dependencies]
fortun-cli = {version = "0.0.1", path = "../../third/simple-windows-tun/ForTunCli" }
windows = {version = "0.51.1", features=["Win32_Networking_WinSock"]}
cidr-utils = "0.5.10"
#winapi = {version = "0.3", features=["ws2def"]}
[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2.1"





[build-dependencies]
tonic-build = "0.9.2"